--- a/css/login.css
+++ b/css/login.css
@@ -24,3 +24,12 @@ body {
   left: 0;
   margin: auto;
 }
+.face_icon {
+  z-index: 2;
+  padding: 5px 0px 0px 0px;
+  width: 30%;
+  position: absolute;
+  right: 0;
+  left: 0;
+  margin: auto;
+}
