--- a/css/login.css
+++ b/css/login.css
@@ -8,7 +8,7 @@ h1 {
 }
 
 body {
-  background-image: url("https://drive.google.com/uc?id=1mmZCGb7K0HKKWLeJ8YVVX4wezavOAWkA");
+  background-image: url("https://cherliett.github.io/LIFF/img/background_pat.jpg");
   background-size: cover;
 }
 .box01 {
