--- a/css/login.css
+++ b/css/login.css
@@ -8,6 +8,19 @@ h1 {
   color: white;
 }
 
+.main_box {
+  position: relative;
+  overflow: hidden;
+}
+.main_box iframe {
+  position: abusolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+  display: block;
+}
 .face_icon {
   z-index: 2;
   padding: 20px 0px 0px 0px;
