--- a/css/login.css
+++ b/css/login.css
@@ -11,6 +11,8 @@ h1 {
 .main_box {
   position: relative;
   overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 .main_box iframe {
   position: abusolute;
