--- a/css/login.css
+++ b/css/login.css
@@ -12,7 +12,7 @@ body {
   background-image: url("https://cherliett.github.io/LIFF/img/background_pat.jpg");
   background-size: cover;
 }
-.box01 {
+.main_box {
   padding:15px;
   width:calc(100% - 20px);
   height:calc(100% - 70px);
@@ -28,16 +28,16 @@ body {
 .box02 {
   padding: 30px 0px 0px 0px;
 }
-.tag01{
+.id_letter{
   font-size: 25px;
 }
-.tag02{
+.id_textbox{
   width: 100%;
   height: 50px;
   border-radius: 10px;
   font-size: 25px;
 }
-.tag03 {
+.login_buttun {
   background: #000000;
   position: relative;
   display: flex;
