--- a/css/login.css
+++ b/css/login.css
@@ -8,8 +8,8 @@ h1 {
   color: white;
 }
 body {
-  background-image: url("https://cherliett.github.io/LIFF/img/background_pat.jpg");
-  background-size: cover;
+  /* background-image: url("https://cherliett.github.io/LIFF/img/background_pat.jpg"); */
+  /* background-size: cover; */
 }
 
 .face_icon {
