--- a/css/login.css
+++ b/css/login.css
@@ -11,6 +11,10 @@ body {
   /* background-image: url("https://cherliett.github.io/LIFF/img/background_pat.jpg"); */
   /* background-size: cover; */
 }
+iframe {
+  width: 100%;
+  height: 100%;
+}
 
 .face_icon {
   z-index: 2;
