--- a/css/login.css
+++ b/css/login.css
@@ -9,10 +9,10 @@ h1 {
 }
 
 body {
-  background-image: url("https://cherliett.github.io/LIFF/img/background_pat.jpg");
-  background-size: cover;
+  //background-image: url("https://cherliett.github.io/LIFF/img/background_pat.jpg");
+  //background-size: cover;
 }
-.main_box {
+.body_box {
   padding:15px;
   width:calc(100% - 20px);
   height:calc(100% - 70px);
@@ -24,34 +24,6 @@ body {
   bottom: 0;
   left: 0;
   margin: auto;
-}
-.letter_box {
-  padding: 30px 0px 0px 0px;
-}
-.id_letter{
-  font-size: 25px;
-}
-.id_textbox{
-  width: 100%;
-  height: 50px;
-  border-radius: 10px;
-  font-size: 25px;
-}
-.id_err {
-  color: red;
-  visibility: hidden;
-}
-.login_buttun {
-  background: #000000;
-  position: relative;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin: 0 auto;
-  max-width: 240px;
-  padding: 10px 25px;
-  color: #ffffff;
-  clip-path: polygon(10% 0%, 100% 0%, 90% 100%, 0% 100%);
 }
 
 .face_icon {
