--- a/css/login.css
+++ b/css/login.css
@@ -37,6 +37,9 @@ body {
   border-radius: 10px;
   font-size: 25px;
 }
+.id_err{
+  color: red;
+}
 .login_buttun {
   background: #000000;
   position: relative;
